@@ -26,6 +26,7 @@ int g_debug = 0;
 int g_askReplace = 1;
 int g_version = 1;
 int g_basic = 0;
+int g_modIcmconf = 1;
 
 void usage()
 {
@@ -248,6 +249,7 @@ int replace(string target)
         if (answer == "k")
         {
             g_askReplace = 0;
+            g_modIcmconf = 0;
             break;
         }
 
@@ -258,8 +260,13 @@ int replace(string target)
             exit(0);
 
         if (answer == "n" || answer == "\n")
+        {
+            if (target == "icmconf")
+                g_modIcmconf = 0;
             return 0;
+        }
 
+        // ? or something else requested
         printf("Press `a' : replace ", target, " and ALL remaining files,\n"
                "      `k' : KEEP ", target, " and all remaining files\n"
                "      `n' : (or press Enter) do NOT replace ", target, 
@@ -346,8 +353,10 @@ void install_version()
 
 void defaultCommand()
 {
-                                        // install a default command if 
-    if (g_defaultCommand != "")         // provided as last arg.
+    if (g_modIcmconf == 0)              // no icmconf modification requested
+        return;
+                                        // write a default command if
+    if (g_defaultCommand != "")        // if provided as last arg.
         fprintf(g_icmconf, g_defaultCommand);
 
                                         // for libraries: uncomment the
@@ -500,7 +509,11 @@ void main(int argc, list argv)
 
     install_rc();               // install .rc file elements
 
-    printf("Done. Don't forget to inspect the #defines in "
-            "'", g_destSpec + "/icmconf'\n\n");
+    printf("Done. ");
+    if (g_modIcmconf)
+        printf("Don't forget to inspect the #defines in "
+            "'", g_destSpec, "/icmconf'\n\n");
+    else
+        printf("'", g_destSpec, "/icmconf' not modified\n\n");
 }
 
